--- a/server/package.json
+++ b/server/package.json
@@ -4,14 +4,23 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node index.js",
-    "dev": "cross-env NODE_ENV=development node index.js"
+    "start": "cross-env NODE_ENV=production node index.js",
+    "dev": "cross-env NODE_ENV=development nodemon index.js",
+    "pm2:start": "pm2 start ecosystem.config.js",
+    "pm2:stop": "pm2 stop webhook-sandbox",
+    "pm2:restart": "pm2 restart webhook-sandbox",
+    "pm2:delete": "pm2 delete webhook-sandbox"
   },
   "dependencies": {
     "express": "^4.18.2",
+    "winston": "^3.9.0",
+    "chalk": "^5.3.0",
+    "lowdb": "^6.0.1",
     "cors": "^2.8.5"
   },
   "devDependencies": {
+    "nodemon": "^3.0.1",
+    "pm2": "^5.3.0",
     "cross-env": "^7.0.3"
   }
 }
